# kSNPP

./: CMakeLists.txt  LICENSE  README.md  approx_work.py
Examples/: expKSNPP  testKSNPP  testTHCS  testTHPP
lib/CDTMAP/: CDTcommon.cpp  CDTmap.h  CDTmapcd.cpp  CDTsnpp.cpp  CDTthpp.cpp  debug.cpp
lib/CSubdivision/: CSubdivision.cpp  CSubdivision.h
test/: expKSNPP.cpp  testKSNPP.cpp  testTHCS.cpp
